tests/ui/try-block/try-block-opt-init.stderr
error[E0381]: used binding `cfg_res` is possibly-uninitialized
  --> $DIR/try-block-opt-init.rs:15:5
   |
LL |     let cfg_res;
   |         ------- binding declared here but left uninitialized
...
LL |         cfg_res = 5;
   |         ----------- binding initialized here in some conditions
...
LL |     assert_eq!(cfg_res, 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^ `cfg_res` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
